avance pagina index

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -13,6 +13,7 @@
             </div>
         </div>
     </div>
+
     <!-- Start Slider -->
     <div id="slides-shop" class="cover-slides">
         <ul class="slides-container">
@@ -56,6 +57,18 @@
     <!-- End Slider -->
 
     <!-- Start Categories  -->
+    <div class="categories-shop">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="shop-cat-box">
+                        <img class="img-fluid" src="{% static 'core/images/gatito.jpeg' %}" alt="" />
+                        <a class="btn hvr-hover" href="#">Productos</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- End Categories -->
 	
