avance pagina por alex

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -20,10 +20,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>DONACION</h2>
+                    <h2>Donacion</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">PetShop</a></li>
-                        <li class="breadcrumb-item active">DONACIÓN</li>
+                        <li class="breadcrumb-item"><a href="{% url 'index' %}">Inicio</a></li>
+                        <li class="breadcrumb-item active">Mis Donaciones</li>
                     </ul>
                 </div>
             </div>
@@ -45,8 +45,35 @@
 					<a class="btn hvr-hover" href="{% url 'checkout' %}">DONAR</a>
                 </div>
             </div>
+            <div class="row my-5">
+                <div class="col-sm-6 col-lg-4">
+                    <div class="service-block-inner">
+                        <h3>Somos Confiables</h3>
+                        <p>
+                            Tus donaciones van dirigidas a nuestra fundacion encargada de cuidar a los animalitos!!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4">
+                    <div class="service-block-inner">
+                        <h3>Somos un equipo</h3>
+                        <p>
+                            junto a ti y nuestro equipo continuamos mejorando dia a dia
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4">
+                    <div class="service-block-inner">
+                        <h3>Somos expertos</h3>
+                        <p>
+                            Nos centramos en mejorar tu experiencia dia a dia en nuestra pagina.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    
     <!-- End About Page -->
 
 
