--- a/core/templates/core/wishlist.html
+++ b/core/templates/core/wishlist.html
@@ -22,7 +22,7 @@
                 <div class="col-lg-12">
                     <h2>Wishlist</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">Shop</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'index' %}">Inicio</a></li>
                         <li class="breadcrumb-item active">Wishlist</li>
                     </ul>
                 </div>
@@ -35,6 +35,7 @@
     <div class="wishlist-box-main">
         <div class="container">
             <div class="row">
+                
                 <div class="col-lg-12">
                     <div class="table-main table-responsive">
                         <table class="table">
@@ -47,6 +48,7 @@
                                     <th>Add Item</th>
                                     <th>Remove</th>
                                 </tr>
+    
                             </thead>
                             <tbody>
                                 <tr>
@@ -72,62 +74,13 @@
 									<i class="fas fa-times"></i>
 								</a>
                                     </td>
-                                </tr>
-                                <tr>
-                                    <td class="thumbnail-img">
-                                        <a href="#">
-									<img class="img-fluid" src="images/img-pro-02.jpg" alt="" />
-								</a>
-                                    </td>
-                                    <td class="name-pr">
-                                        <a href="#">
-									Lorem ipsum dolor sit amet
-								</a>
-                                    </td>
-                                    <td class="price-pr">
-                                        <p>$ 60.0</p>
-                                    </td>
-                                    <td class="quantity-box">In Stock</td>
-                                    <td class="add-pr">
-                                        <a class="btn hvr-hover" href="#">Add to Cart</a>
-                                    </td>
-                                    <td class="remove-pr">
-                                        <a href="#">
-									<i class="fas fa-times"></i>
-								</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="thumbnail-img">
-                                        <a href="#">
-									<img class="img-fluid" src="images/img-pro-03.jpg" alt="" />
-								</a>
-                                    </td>
-                                    <td class="name-pr">
-                                        <a href="#">
-									Lorem ipsum dolor sit amet
-								</a>
-                                    </td>
-                                    <td class="price-pr">
-                                        <p>$ 30.0</p>
-                                    </td>
-                                    <td class="quantity-box">In Stock</td>
-                                    <td class="add-pr">
-                                        <a class="btn hvr-hover" href="#">Add to Cart</a>
-                                    </td>
-                                    <td class="remove-pr">
-                                        <a href="#">
-									<i class="fas fa-times"></i>
-								</a>
-                                    </td>
-                                </tr>
                             </tbody>
-                        </table>
+                        </table>    
                     </div>
                 </div>
+                
             </div>
         </div>
     </div>
-    <!-- End Wishlist -->
 
     {% endblock %}
