--- a/core/templates/core/agregar.html
+++ b/core/templates/core/agregar.html
@@ -12,19 +12,16 @@
                 <table>
                     {{ form | crispy}}
                 </table>
-                <input type="submit" class="btn btn-success" value="Agregar">
+                <input type="submit" class="btn btn-success" value="Actualizar">
                 
             </form>
-            <br><br><br>
-            
         </div>
     </div>
 </div>
-    
- 
 {% endblock %}
     
 {% block js  %}
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     {% if messages %} 
         {% for aux in messages %} 
             <script>
