--- a/core/templates/core/contact-us.html
+++ b/core/templates/core/contact-us.html
@@ -23,7 +23,7 @@
                 <div class="col-lg-12">
                     <h2>Contactanos</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'index' %}">inicio</a></li>
                         <li class="breadcrumb-item active"> Contactanos </li>
                     </ul>
                 </div>
